# zsh-git-prompt-rs

./: Cargo.toml  README.md  SECURITY.md  build.rs
.claude/: settings.local.json
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: zshrc.sh
src/: branch_parse.rs  data.rs  main.rs  status_parse.rs
src/resources/: zshrc.sh
